# prompt-token-trim-py

./: README.md  pyproject.toml
src/prompt_token_trim/: __init__.py  trim.py
tests/: test_trim.py
