[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "prompt-token-trim-py"
version = "0.1.0"
description = "Trim prompt messages to fit a token budget while preserving priority. Python port of @mukundakatta/prompt-token-trim."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "agents",
  "rag",
  "evals",
  "tokens",
  "trim",
  "prompts",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/prompt-token-trim-py"
Issues = "https://github.com/MukundaKatta/prompt-token-trim-py/issues"
Source = "https://github.com/MukundaKatta/prompt-token-trim-py"
"JS sibling" = "https://www.npmjs.com/package/@mukundakatta/prompt-token-trim"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_token_trim"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
